# FreeRTOS-Apalis-TK1-K20

./: .cproject  .gitlab-ci.yml  CMakeLists.txt  MK20DN512xxx10_flash.ld  freertosCMakeLists.txt
app/: CMakeLists.txt
app/include/: FreeRTOSConfig.h  apalis-tk1-k20-api.h  com_task.h  gpio_ext.h
app/src/: adc_task.c  can_task.c  com_task.c  gpio_ext.c  main.c
board/: CMakeLists.txt  pin_mux.c
board/src/: board.c  pin_mux.c
drivers/: CMakeLists.txt  fsl_dspi.c  fsl_dspi_edma.c  fsl_flexcan.h
drivers/src/: fsl_dspi.c  fsl_dspi_edma.c  fsl_flexcan.c
freertos/: CMakeLists.txt
freertos/src/portable/GCC/ARM_CM3/: port.c
source/: adc_task.c  com_task.c  gpio_ext.h
utilities/: fsl_debug_console.c  fsl_debug_console.h
